add 2 todos, update databasecreate with 2 more tables

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
+    // TODO encrypt or remove from here
     "DefaultConnection": "server=localhost;port=3306;database=hork;user=admin;password=password;"
-  }
+  } 
 } 
